--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:debug": "react-scripts --inspect start --no-cache --runInBand",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
