feat(media): Start work on allowing media uploaded for an activity
I'm trying `minio` as a self-hosted S3 alternative. This allows
for S3 storage later (minio is mostly API compatible with S3)
but it makes development much easier.

Credentials are stored in source for now because I don't have any
secret infrastructure set up yet.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,6 +39,7 @@ http {
     }
 
     location /api/ {
+      client_max_body_size 1G;
       proxy_pass        http://api/;
       proxy_redirect    off;
     }
