--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -55,3 +55,14 @@ services:
       - "35729:35729"
     depends_on:
       - webapi
+  minio:
+    image: minio/minio
+    container_name: minio
+    volumes:
+      - ./minio/data:/data
+    ports:
+      - "9000:9000"
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server /data
